improve: styles above the fold

--- a/s/ui/styles/core.css
+++ b/s/ui/styles/core.css
@@ -11,6 +11,11 @@
 			transparent;
 	}
 
+	::selection, ::-moz-selection {
+		color: white;
+		background: var(--selection);
+	}
+
 	a {
 		color: var(--prime);
 		text-decoration: none;
