tweaks: quote and stuff

--- a/s/ui/styles/core.css
+++ b/s/ui/styles/core.css
@@ -11,7 +11,7 @@
 			transparent;
 	}
 
-	::selection, ::-moz-selection {
+	::selection, ::-moz-selection, ::-webkit-selection {
 		color: white;
 		background: var(--selection);
 	}
