--- a/s/client/styles/page.css
+++ b/s/client/styles/page.css
@@ -30,5 +30,56 @@
 		min-height: 100%;
 		max-width: var(--page-width);
 	}
+
+	xxx {
+		.plate {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+
+			min-height: 100%;
+
+			> * {
+				width: 100%;
+			}
+		}
+
+		main {
+			&::before {
+				content: "";
+				display: block;
+				height: var(--header-size);
+			}
+		}
+	}
+
+	.featurettes {
+		container-type: inline-size;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 10em;
+
+		> section {
+			padding: 1em;
+		}
+	}
+
+	h2 {
+		font-size: 2em;
+	}
+
+	.chill {
+		opacity: 0.5;
+		font-size: 1.5em;
+		font-family: serif;
+		font-weight: normal;
+		font-style: italic;
+	}
+
+	.emoji {
+		font-size: 3em;
+	}
 }
 
