--- a/s/client/styles/page.css
+++ b/s/client/styles/page.css
@@ -17,40 +17,34 @@
 	}
 
 	body {
-		color: var(--text);
-		background: transparent;
-
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+
+		width: 100%;
+		max-width: var(--page-width);
+		margin: auto;
+	}
+
+	main {
+		width: 100%;
+
+		&::before {
+			content: "";
+			display: block;
+			height: var(--header-size);
+		}
 	}
 
 	shrimple-shell {
-		width: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
 		min-height: 100%;
-		max-width: var(--page-width);
-	}
 
-	xxx {
-		.plate {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-
-			min-height: 100%;
-
-			> * {
-				width: 100%;
-			}
-		}
-
-		main {
-			&::before {
-				content: "";
-				display: block;
-				height: var(--header-size);
-			}
+		> * {
+			width: 100%;
 		}
 	}
 
