--- a/s/client/styles/page.css
+++ b/s/client/styles/page.css
@@ -1,16 +1,13 @@
 
 @layer page {
-	html, body {
-		min-height: 100%;
-	}
-
 	html {
-		font-size: clamp(12px, 2vw, 21px);
+		font-size: clamp(12px, 2dvw, 21px);
 		font-family: var(--font-primary);
+
+		scrollbar-gutter: stable;
 
 		color: var(--text);
 		text-shadow: var(--text-shadow);
-
 		background:
 			radial-gradient(circle at center, #0a2c4033 10%, #09131fcc 80%) fixed,
 			url("https://stuff.sfo3.cdn.digitaloceanspaces.com/shrimple/bg.webp") center / cover fixed #000;
@@ -21,18 +18,37 @@
 		flex-direction: column;
 		align-items: center;
 
+		min-height: 100dvh;
+
 		width: 100%;
 		max-width: var(--page-width);
+
 		margin: auto;
-	}
 
-	main {
-		width: 100%;
+		> shrimple-header {
+			z-index: 1;
+			position: sticky;
+			top: 0;
+		}
 
-		&::before {
-			content: "";
-			display: block;
-			height: var(--header-size);
+		> main {
+			width: 100%;
+		}
+
+		> footer {
+			margin-top: auto;
+
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			width: 100%;
+
+			padding: 3em 1em;
+			background: var(--plate);
+			backdrop-filter: blur(0.5em);
+			border-radius: 1em 1em 0em 0em;
+			border-top: 0.1em solid #fff2;
+			box-shadow: 0em -0.5em 1em #0004;
 		}
 	}
 
