--- a/s/client/styles/vars.css
+++ b/s/client/styles/vars.css
@@ -16,6 +16,8 @@
 		--e280: #27ff23;
 		--link: #0cf;
 
+		--free: lime;
+
 		--selection: color-mix(in oklch, transparent, var(--prime) 80%);
 		--selection-text: white;
 		--focus: cyan;
