tweaks: sizing and footer

--- a/s/client/styles/page.css
+++ b/s/client/styles/page.css
@@ -36,6 +36,7 @@
 		}
 
 		> footer {
+			color: color-mix(in oklch, transparent, var(--text) 50%);
 			margin-top: auto;
 
 			display: flex;
@@ -45,9 +46,8 @@
 			gap: 2em;
 
 			padding: 3em 1em;
-			background: var(--plate);
+			background: #1114;
 			backdrop-filter: blur(0.5em);
-			border-radius: 1em 1em 0em 0em;
 			border-top: 0.1em solid #fff2;
 			box-shadow: 0em -0.5em 1em #0004;
 		}
@@ -79,12 +79,12 @@
 	}
 
 	h2 {
-		font-size: 2em;
+		font-size: 1.6em;
 	}
 
 	.chill {
 		opacity: 0.5;
-		font-size: 1.5em;
+		font-size: 1.1em;
 		font-family: serif;
 		font-weight: normal;
 		font-style: italic;
