--- a/s/client/feats/providers/style.css
+++ b/s/client/feats/providers/style.css
@@ -20,10 +20,10 @@
 	[x-pill] {
 		display: inline-flex;
 		align-items: center;
-		gap: var(--padding-smaller);
+		gap: 0.5em;
 		padding: 0.2rem 0.6rem;
 		border-radius: 999px;
-		font-size: var(--font-size-smaller);
+		font-size: 0.8em;
 		font-weight: 600;
 	}
 
@@ -61,7 +61,7 @@
 
 		h3 {
 			margin: 0;
-			font-size: 1.5em;
+			font-size: 1.1em;
 		}
 	}
 
