--- a/s/client/feats/providers/style.css
+++ b/s/client/feats/providers/style.css
@@ -29,8 +29,8 @@
 
 	.provider-box {
 		display: flex;
-		flex-direction: column;
 		flex-wrap: wrap;
+		justify-content: center;
 		gap: 0.8em;
 	}
 
