--- a/s/client/feats/quote/style.css
+++ b/s/client/feats/quote/style.css
@@ -35,19 +35,19 @@
 		flex-direction: column;
 		justify-content: center;
 
-		font-size: 1.3em;
+		font-size: 1.6em;
 		padding: 1em;
 		flex: 1 1 auto;
-		gap: 0.5em;
+		gap: 1em;
+		text-align: center;
 
 		blockquote {
-			text-align: left;
 		}
 
 		figcaption {
 			padding-left: 1em;
 			font-style: italic;
-			text-align: right;
+			font-size: 0.6em;
 		}
 	}
 
