--- a/s/client/feats/mindset/style.css
+++ b/s/client/feats/mindset/style.css
@@ -6,13 +6,15 @@
 	width: 100%;
 	text-align: center;
 
+	> h2 {
+		margin-bottom: 2em;
+	}
+
 	.box {
 		font-size: 1em;
 		display: flex;
 		flex-wrap: wrap;
 		gap: 2em;
-
-		margin-top: 3em;
 
 		> section {
 			flex: 1 0 10em;
