--- a/s/client/feats/providers/style.css
+++ b/s/client/feats/providers/style.css
@@ -4,27 +4,10 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	text-align: center;
 
-	h2 {
-		text-align: center;
-	}
-
-	h3 {
+	> h2 {
 		margin-bottom: 2em;
-	}
-
-	small {
-		opacity: 0.5;
-	}
-
-	[x-pill] {
-		display: inline-flex;
-		align-items: center;
-		gap: 0.5em;
-		padding: 0.2rem 0.6rem;
-		border-radius: 999px;
-		font-size: 0.8em;
-		font-weight: 600;
 	}
 
 	.provider-box {
