--- a/s/client/feats/providers/style.css
+++ b/s/client/feats/providers/style.css
@@ -18,6 +18,8 @@
 	}
 
 	.provider-card {
+		position: relative;
+
 		display: flex;
 		align-items: center;
 		gap: var(--padding);
@@ -51,13 +53,19 @@
 		}
 	}
 
-	.free {
+	[x-pill] {
 		position: absolute;
-		top: 0.4em;
-		left: 0.6em;
-		font-size: 0.6em;
-		color: color-mix(in oklch, var(--free), white 50%);
-		background: color-mix(in oklch, transparent, var(--free) 15%);
+		top: -0.5em;
+		left: -0.5em;
+
+		font-size: 0.7em;
+		color: var(--free);
+
+		&.premium {
+			color: var(--calm);
+			left: unset;
+			right: -0.5em;
+		}
 	}
 
 	.toggle {
