tweak: wording and vibes

--- a/s/client/feats/quote/style.css
+++ b/s/client/feats/quote/style.css
@@ -47,10 +47,9 @@
 		}
 
 		figcaption {
+			opacity: 0.5;
 			padding-left: 1em;
 			font-style: italic;
-			color: color-mix(in oklch, var(--calm), white 50%);
-			font-size: 0.8em;
 		}
 	}
 
