--- a/s/client/feats/mindset/style.css
+++ b/s/client/feats/mindset/style.css
@@ -10,6 +10,14 @@
 		margin-bottom: 2em;
 	}
 
+	h3 > span {
+		color: var(--prime);
+	}
+
+	p {
+		opacity: 0.5;
+	}
+
 	.box {
 		font-size: 1em;
 		display: flex;
@@ -18,10 +26,6 @@
 
 		> section {
 			flex: 1 0 10em;
-
-			h3 > span {
-				color: var(--prime);
-			}
 		}
 	}
 }
