--- a/s/client/styles/theme/reset.css
+++ b/s/client/styles/theme/reset.css
@@ -6,7 +6,7 @@
 		box-sizing: border-box;
 
 		scrollbar-width: thin;
-		scrollbar-color: #888 transparent;
+		scrollbar-color: #888 #444;
 	}
 
 	::-webkit-scrollbar { width: 8px; }
