fix: weirdness when scrolling on mobile

--- a/s/client/styles/page.css
+++ b/s/client/styles/page.css
@@ -10,7 +10,7 @@
 		text-shadow: var(--text-shadow);
 		background: radial-gradient(circle at 20% 20%,
  			color-mix(in oklab, transparent, var(--prime) 18%) 0%, transparent 55%), radial-gradient(circle at 80% 80%,
- 			color-mix(in oklab, transparent, var(--tier-whale) 15%) 0%, transparent 60%), var(--gradient-ocean) fixed;
+ 			color-mix(in oklab, transparent, var(--tier-whale) 15%) 0%, transparent 60%), var(--gradient-ocean);
 	}
 
 	body {
