--- a/s/client/feats/providers/style.css
+++ b/s/client/feats/providers/style.css
@@ -11,9 +11,8 @@
 	}
 
 	.provider-box {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: center;
+		display: grid;
+		grid-template-columns: repeat(2, minmax(220px, 1fr));
 		gap: 0.8em;
 	}
 
@@ -135,3 +134,10 @@
 	}
 }
 
+@media (max-width: 700px) {
+	.feat-providers {
+		.provider-box {
+			grid-template-columns: 1fr;
+		}
+	}
+}
